--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>简历生成器</title>
+    <title>仪志鑫</title>
     <link rel="stylesheet" href="static/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.1.0/remodal.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.1.0/remodal-default-theme.min.css">
@@ -23,21 +23,21 @@
                     <input type="text" id="avatar-url">
                     <button data-remodal-action="confirm" class="remodal-confirm">确定</button>
                 </div>
-                <h1 id="username" >ekCit</h1>
-                <h4 id="persona-tag" >Python / Web / 互联网教育</h4>
+                <h1 id="username" >仪志鑫</h1>
+                <h4 id="persona-tag" >JAVA / Web / 医疗软件</h4>
             </div>
             <div class="profile info-unit">
                 <h2 class="info-header"><i class="iconfont icon-person"></i> <span class="info-title">基本信息</span></h2>
                 <hr>
                 <ul class="info-list">
                     <li>
-                        <label class="left-label">姓名</label><span class="label-value">XXX</span></li>
+                        <label class="left-label">姓名</label><span class="label-value">仪志鑫</span></li>
                     <li>
                         <label class="left-label">学历</label><span class="label-value">本科</span></li>
                     <li>
-                        <label class="left-label">毕业院校</label><span class="label-value">北京邮电大学</span></li>
+                        <label class="left-label">毕业院校</label><span class="label-value">枣庄学院</span></li>
                     <li>
-                        <label class="left-label">毕业年份</label><span class="label-value">2017</span></li>
+                        <label class="left-label">毕业年份</label><span class="label-value">2019</span></li>
                 </ul>
             </div>
             <div class="contact info-unit">
@@ -45,13 +45,13 @@
                 <hr>
                 <ul class="info-list">
                     <li>
-                        <label class="left-label">手机</label><span class="label-value">182XXXXXXXX</span></li>
+                        <label class="left-label">手机</label><span class="label-value">17864090611</span></li>
                     <li>
-                        <label class="left-label">邮箱</label><span class="label-value">crmrc2014@gmail.com</span></li>
+                        <label class="left-label">邮箱</label><span class="label-value">new961102@163.com</span></li>
                     <li>
                         <label class="left-label">个人主页</label><span class="label-value">exit-tixe.me</span></li>
                     <li>
-                        <label class="left-label">Github</label><span class="label-value">github.com/ekCit</span></li>
+                        <label class="left-label">Github</label><span class="label-value">https://github.com/201512130144</span></li>
                 </ul>
             </div>
             <div class="skill info-unit">
@@ -59,7 +59,7 @@
                 <hr>
                 <ul class="progress-list">
                     <li>
-                        <label class="left-label">Python</label>
+                        <label class="left-label">Java</label>
                         <progress value="80" max="100"></progress>
                     </li>
                     <li>
@@ -81,13 +81,13 @@
                 <hr>
                 <ul class="stack-list">
                     <li>
-                        <label class="left-label">前端</label><span class="label-value">jQuery、Angular.js、React.js</span></li>
+                        <label class="left-label">前端</label><span class="label-value">jQuery、js</span></li>
                     </li>
                     <li>
-                        <label class="left-label">后端</label><span class="label-value">Flask、Django、Twisted、Node.js、MongoDB、MySQL、Redis</span></li>
+                        <label class="left-label">后端</label><span class="label-value">Spring、SpringBoot、SpringCloud、</span></li>
                     </li>
                     <li>
-                        <label class="left-label">其它</label><span class="label-value">我全都是瞎写的。</span></li>
+                        <label class="left-label">数据库</label><span class="label-value">Oracle、Redis</span></li>
                     </li>
                 </ul>
             </div>
@@ -113,7 +113,7 @@
                 <hr>
                 <ul class="experience-list">
                     <li>
-                        <h3>北京邮电大学 - 网络工程专业（本科）2012-2017</h3>
+                        <h3>枣庄学院 - 计算机科学与技术专业（本科）2015-2019</h3>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                         </p>
@@ -125,13 +125,19 @@
                 <hr>
                 <ul class="experience-list">
                     <li>
-                        <h3>北京创客空间－实习生（实习）</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                        <h3>众阳健康 - Java开发</h3>
+                        <p>开发SPD平台基础模块和个性化需求。SPD是以院内耗材一级仓库为核心的管理模式。主要针对高值耗材部分，落实医药分离，实现零差价，
+                            对高值耗材精细化管理。服务端Supply端，提供药品，器材的输入，同时产生唯一码进而简化药品器材的商品代码，
+                            实现可追溯，同时支持供应商的资质审核管理。管理端Process端，对药品入中心库进行盘库，二级科室可以直接扫码自动出库到二级科室，
+                            根据计价项目关联医保产生计费，实现零库存，不压缩院内资金，同时可以关联院内病人，实现全流程追溯药品耗材，可以通过PDA实时查询。
+                            配送端Distribution端，依据院内耗材仓库剩余耗材预警，以微信，手机短信等方式实现即时提醒，供应商无需折返院内就可以即时配货,产生入库
                         </p>
                     </li>
                     <li>
-                        <h3>实验楼－课程内容（实习）</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        <h3>国子软件 - Java开发</h3>
+                        <p>开发齐鲁工业大学财务一体化系统的历史数据模块和导入导出模块，对工作流财务审核、进修培训模块、项目申报等进行维护和客户个性化需求开发。
+                            同时维护维护高校科研系统。历史数据模块是对往年申报的数据以表格的形式进行统计汇总，根据历史年份来决定简要程度。
+                            同时对EXCEL等数据提供进行技术导入支持，使用多线程分批导入提高导入速度
                         </p>
                     </li>
                 </ul class="experience-list">
@@ -141,60 +147,43 @@
                 <hr>
                 <ul class="experience-list">
                     <li>
-                        <h3>基于 Qt 5 的文本编辑器</h3>
+                        <h3>基于 Java 的ICU重症监护系统</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam。Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                            大四学期,创业小组接手枣庄市立医院ICU系统开发，通过PDA获取信息，
+                            折线图只管展示病人症状、用药、恢复情况，
+                            对不符合预期状况进行预警，如ICU的外设红色提醒灯。
                             <br/>
                         </p>
                     </li>
                     <li>
-                        <h3>基于 Flask 的主机监视系统</h3>
+                        <h3>基于 Java 的婚纱管理系统 </h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                        </p>
+                            本科毕业设计，以Java Web技术为主导，实现对婚纱的纵向管理
+                         </p>
                     </li>
                     <li>
-                        <h3>基于 Live2D 与 clmtrackr 的山寨 Facerig</h3>
+                        <h3>基于 Java 的校园二手交易APP</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                        </p>
+                            大三学期，毕业季来临，由百度贴吧推出校内论坛式APP，院内使用
+                         </p>
                     </li>
                     <li>
-                        <h3>如果项目太少，可以在实验楼上找项目做啊:D</h3>
+                        <h3>基于 Java Web 的人力管理系统</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                        </p>
+                            大二学期，学院成立第一届创业小组，作为当时第一个团队接受的第一个项目，具有纪念意义
+                         </p>
                     </li>
                 </ul>
             </div>
-            <div class="trophy info-unit">
-                <h2 class="info-header"><i class="iconfont icon-trophy"></i> <span class="info-title">奖项与证书</span></h2>
-                <hr>
-                <ul class="experience-list">
-                    <li>
-                        <h3>小学生作文二等奖</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam。
-                        </p>
-                    </li> 
-                    <li>
-                        <h3>曾获统一冰红茶“再来一瓶”奖</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam。
-                        </p>
-                    </li> 
-                    <li>
-                        <h3>这一行也是为了凑版面</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam。
-                        </p>
-                    </li>                     
-            </div>
+          
             <div class="aboutme info-unit right-paragraph">
                 <h2 class="info-header"><i class="iconfont icon-flower"></i> <span class="info-title">自我评价</span></h2>
                 <hr>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    高考失利之后，上了大学就下定决心再也不要上学了，并且扬言不可能考研，但是大四实习之年，经历了社会工作高压，结婚生子的家庭压力，
+                    我开始意识到自己的能力急剧不足，于是我综合其他成本考虑，我选择了考研这条路，万万没想到更加坚定了我对计算机的热爱，越是打击，越是兴奋,越是前进,
+                    终于我看到了希望.所以面对压力千千万，在我保持亢奋同时也会调整方法策略,稳步向前，正如我考了三年2020/2022/2023三年考研,分数240/280/320一样,
+                    就不会留下什么遗憾,也会得到一个最适合自己的结果
                 </p>
             </div>
         </div>
