commit my modify 2023.2.23 20:00

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </div>
                 
                 <h1 id="username" >仪志鑫</h1>
-                <h4 id="persona-tag" >JAVA / Web / 医疗软件</h4>
+                <h4 id="persona-tag" >Java / Web </h4>
 
             </div>
             <div class="profile info-unit">
@@ -51,9 +51,8 @@
                     <li>
                         <label class="left-label">邮箱</label><span class="label-value">new961102@163.com</span></li>
                     <li>
-                        <label class="left-label">个人主页</label><span class="label-value">exit-tixe.me</span></li>
-                    <li>
-                        <label class="left-label">Github</label><span class="label-value">https://github.com/201512130144</span></li>
+                        <label class="left-label">Github</label><span class="label-value" style="color:green;"
+              onclick="javascript:window.open('https://github.com/201512130144')"  >https://github.com/201512130144</span></li>
                 </ul>
             </div>
             <div class="skill info-unit">
@@ -61,20 +60,12 @@
                 <hr>
                 <ul class="progress-list">
                     <li>
-                        <label class="left-label">Java</label>
+                        <label class="left-label"  title="熟练且大学以来一直从事">Java Web全栈</label>
                         <progress value="80" max="100"></progress>
                     </li>
                     <li>
-                        <label class="left-label">html/css</label>
-                        <progress value="70" max="100"></progress>
-                    </li>
-                    <li>
-                        <label class="left-label">Javascript</label>
-                        <progress value="60" max="100"></progress>
-                    </li>
-                    <li>
-                        <label class="left-label">机器学习</label>
-                        <progress value="60" max="100"></progress>
+                        <label class="left-label" title="感兴趣且研究生方向">人工智能</label>
+                        <progress value="10" max="100"></progress>
                     </li>
                 </ul>
             </div>
@@ -86,7 +77,7 @@
                         <label class="left-label">前端</label><span class="label-value">jQuery、js</span></li>
                     </li>
                     <li>
-                        <label class="left-label">后端</label><span class="label-value">Spring、SpringBoot、SpringCloud、</span></li>
+                        <label class="left-label">后端</label><span class="label-value">Spring、SpringBoot、SpringCloud</span></li>
                     </li>
                     <li>
                         <label class="left-label">数据库</label><span class="label-value">Oracle、Redis</span></li>
@@ -117,7 +108,7 @@
                     <li>
                         <h3>枣庄学院 - 计算机科学与技术专业（本科）2015-2019</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                          本科期间致力于java技术的实践，以枣庄学院第一届创业小组的形式对技术进行应用。
                         </p>
                     </li>
                 </ul>
@@ -127,19 +118,18 @@
                 <hr>
                 <ul class="experience-list">
                     <li>
-                        <h3>众阳健康 - Java开发</h3>
+                        <h3>医疗耗材 - Java开发</h3>
                         <p>开发SPD平台基础模块和个性化需求。SPD是以院内耗材一级仓库为核心的管理模式。主要针对高值耗材部分，落实医药分离，实现零差价，
                             对高值耗材精细化管理。服务端Supply端，提供药品，器材的输入，同时产生唯一码进而简化药品器材的商品代码，
-                            实现可追溯，同时支持供应商的资质审核管理。管理端Process端，对药品入中心库进行盘库，二级科室可以直接扫码自动出库到二级科室，
-                            根据计价项目关联医保产生计费，实现零库存，不压缩院内资金，同时可以关联院内病人，实现全流程追溯药品耗材，可以通过PDA实时查询。
+                            实现可追溯，同时支持供应商的资质审核管理。管理端Process端，对药品入中心库进行盘库，二级科室扫码使用并且生成账单，
+                            根据计价项目关联医保产生计费，实现零库存，不压缩院内资金。同时关联院内病人，实现全流程追溯药品耗材，可以通过PDA实时查询。
                             配送端Distribution端，依据院内耗材仓库剩余耗材预警，以微信，手机短信等方式实现即时提醒，供应商无需折返院内就可以即时配货,产生入库
                         </p>
                     </li>
                     <li>
-                        <h3>国子软件 - Java开发</h3>
-                        <p>开发齐鲁工业大学财务一体化系统的历史数据模块和导入导出模块，对工作流财务审核、进修培训模块、项目申报等进行维护和客户个性化需求开发。
-                            同时维护维护高校科研系统。历史数据模块是对往年申报的数据以表格的形式进行统计汇总，根据历史年份来决定简要程度。
-                            同时对EXCEL等数据提供进行技术导入支持，使用多线程分批导入提高导入速度
+                        <h3>财务一体化 - Java开发</h3>
+                        <p>以面向对象的模式开发财务一体化系统的历史数据模块和导入导出模块，对工作流财务审核、进修培训模块、项目申报等进行维护和客户个性化需求开发。
+                            同时对EXCEL等数据提供进行技术验证，使用多线程及缓存提高速度
                         </p>
                     </li>
                 </ul class="experience-list">
@@ -151,7 +141,7 @@
                     <li>
                         <h3>基于 Java 的ICU重症监护系统</h3>
                         <p>
-                            大四学期,创业小组接手枣庄市立医院ICU系统开发，通过PDA获取信息，
+                            大四学期,创业小组以学校的名义承担枣庄市立医院ICU系统开发，通过PDA获取信息，
                             折线图只管展示病人症状、用药、恢复情况，
                             对不符合预期状况进行预警，如ICU的外设红色提醒灯。
                             <br/>
@@ -160,13 +150,13 @@
                     <li>
                         <h3>基于 Java 的婚纱管理系统 </h3>
                         <p>
-                            本科毕业设计，以Java Web技术为主导，实现对婚纱的纵向管理
+                            本科毕业设计，以Java Web技术为主导，实现对婚纱的纵向管理即生命周期管理，横向管理即种类管理
                          </p>
                     </li>
                     <li>
                         <h3>基于 Java 的校园二手交易APP</h3>
                         <p>
-                            大三学期，毕业季来临，由百度贴吧推出校内论坛式APP，院内使用
+                            大三学期，毕业季来临，由百度贴吧产生构想，推出校内论坛式APP进行线上交易联络
                          </p>
                     </li>
                     <li>
@@ -183,9 +173,9 @@
                 <hr>
                 <p>
                     高考失利之后，上了大学就下定决心再也不要上学了，并且扬言不可能考研，但是大四实习之年，经历了社会工作高压，结婚生子的家庭压力，
-                    我开始意识到自己的能力急剧不足，于是我综合其他成本考虑，我选择了考研这条路，万万没想到更加坚定了我对计算机的热爱，越是打击，越是兴奋,越是前进,
-                    终于我看到了希望.所以面对压力千千万，在我保持亢奋同时也会调整方法策略,稳步向前，正如我考了三年2020/2022/2023三年考研,分数240/280/320一样,
-                    就不会留下什么遗憾,也会得到一个最适合自己的结果
+                    我开始意识到自己的能力急剧不足。于是我综合其他成本考虑，选择了边工作边考研这条路，万万没想到考了三年，成绩的不理想不仅没有磨灭我对上岸的期待，反而更加坚定了我对计算机的热爱，
+                    越是打击，越是兴奋,越是前进, 终于我看到了希望。正如2020/2022/2023三年,对应分数240/280/320一样,面对压力，在我保持亢奋的同时也会调整方法策略,稳步向前。以积极的态度面对明天，
+                    就不会留下什么遗憾,也会得到一个最适合自己的结果。
                 </p>
             </div>
         </div>
