--- a/index.html
+++ b/index.html
@@ -108,7 +108,15 @@
                     <li>
                         <h3>枣庄学院 - 计算机科学与技术专业（本科）2015-2019</h3>
                         <p>
-                          本科期间致力于java技术的实践，以枣庄学院第一届创业小组的形式对技术进行应用。
+                         本科课程:Java、Html、C语言数据结构、操作系统、计算机网络、计算机组成原理、数据库原理、汇编语言
+                        </p>
+                    </li>
+                </ul>
+                <ul class="experience-list">
+                    <li>
+                       
+                        <p>
+                            本科期间致力于java技术的实践，以枣庄学院第一届创业小组的形式对技术进行应用。
                         </p>
                     </li>
                 </ul>
