--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
                         <progress value="80" max="100"></progress>
                     </li>
                     <li>
+                        <label class="left-label"  title="面向对象编码能力">Java编码</label>
+                        <progress value="80" max="100"></progress>
+                    </li>
+                    <li>
                         <label class="left-label" title="感兴趣且研究生方向">人工智能</label>
                         <progress value="10" max="100"></progress>
                     </li>
@@ -107,8 +111,18 @@
                 <ul class="experience-list">
                     <li>
                         <h3>枣庄学院 - 计算机科学与技术专业（本科）2015-2019</h3>
+                        <p >
+                            <b>一志愿：电子科技大学 - 计算机专硕</b><br>
+                            &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp初试成绩：        &nbsp&nbsp &nbsp&nbsp 思想政治：65   &nbsp&nbsp&nbsp&nbsp 英语一：60      &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp 数学一：102 <br>
+                            &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp 计算机专业基础(数据结构+操作系统) &nbsp&nbsp ：&nbsp&nbsp96 &nbsp&nbsp &nbsp&nbsp &nbsp&nbsp &nbsp&nbsp   <b>总分:323</b>
+                        </p>
+                    </li>
+                </ul>
+                <ul class="experience-list">
+                    <li>
                         <p>
-                         本科课程:Java、Html、C语言数据结构、操作系统、计算机网络、计算机组成原理、数据库原理、汇编语言
+                         <b>本科课程：Java程序设计、C语言、软件工程、数据结构、操作系统<br>
+                            &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp计算机网络、计算机组成原理、数据库原理、Html、汇编语言</b>
                         </p>
                     </li>
                 </ul>
@@ -116,7 +130,7 @@
                     <li>
                        
                         <p>
-                            本科期间致力于java技术的实践，以枣庄学院第一届创业小组的形式对技术进行应用。
+                           <b>证书：英语四级、C语言二级</b>
                         </p>
                     </li>
                 </ul>
@@ -126,18 +140,15 @@
                 <hr>
                 <ul class="experience-list">
                     <li>
-                        <h3>医疗耗材 - Java开发</h3>
-                        <p>开发SPD平台基础模块和个性化需求。SPD是以院内耗材一级仓库为核心的管理模式。主要针对高值耗材部分，落实医药分离，实现零差价，
-                            对高值耗材精细化管理。服务端Supply端，提供药品，器材的输入，同时产生唯一码进而简化药品器材的商品代码，
-                            实现可追溯，同时支持供应商的资质审核管理。管理端Process端，对药品入中心库进行盘库，二级科室扫码使用并且生成账单，
-                            根据计价项目关联医保产生计费，实现零库存，不压缩院内资金。同时关联院内病人，实现全流程追溯药品耗材，可以通过PDA实时查询。
-                            配送端Distribution端，依据院内耗材仓库剩余耗材预警，以微信，手机短信等方式实现即时提醒，供应商无需折返院内就可以即时配货,产生入库
-                        </p>
+                        <h3 >医疗耗材 - SpringCloud</h3>
+                        <p>为了落实医药分离，实现零差价，精细化管理，故推出SPD平台。该平台采用SpringCloud+Tomcat/Nginx+Redis+RabbitMQ+oracle的技术开发框架。
+						 Supply端，以redis缓存进行耗材/药品信息维护，减少I/O，缓解数据库压力。Process端，系统以Nginx处理静态资源，tomcat处理动态资源，
+						 对耗材/药品，采取redis缓存锁做并发处理，产生对应商品条码的唯一码，数据持久化到oracle。Distribution端，耗材/药品消耗使用RabbitMQ实时发送异步消息，进行预警并
+						以微信、短信实时提醒。
                     </li>
                     <li>
-                        <h3>财务一体化 - Java开发</h3>
-                        <p>以面向对象的模式开发财务一体化系统的历史数据模块和导入导出模块，对工作流财务审核、进修培训模块、项目申报等进行维护和客户个性化需求开发。
-                            同时对EXCEL等数据提供进行技术验证，使用多线程及缓存提高速度
+                        <h3>财务一体化 - SpringMvc</h3>
+                        <p>以面向对象的模式，开发财务一体化导入导出平台，以EasyExcel技术进行百万级别数据的导出（用时30s），分批读取+JDBC分批插入+事务的批量操作来实现百万数据的导入（用时5s），同时对工作流财务报销、项目申报等模块进行开发及个性化需求维护。
                         </p>
                     </li>
                 </ul class="experience-list">
@@ -150,27 +161,27 @@
                         <h3>基于 Java 的ICU重症监护系统</h3>
                         <p>
                             大四学期,创业小组以学校的名义承担枣庄市立医院ICU系统开发，通过PDA获取信息，
-                            折线图只管展示病人症状、用药、恢复情况，
-                            对不符合预期状况进行预警，如ICU的外设红色提醒灯。
+                            以锐浪报表展示病人病史、医疗状况、恢复情况，以病历模板形式书写病历并给出治疗建议。对超出预期状况进行预警，如ICU的外设红色提醒灯。
                             <br/>
                         </p>
                     </li>
                     <li>
                         <h3>基于 Java 的婚纱管理系统 </h3>
                         <p>
-                            本科毕业设计，以Java Web技术为主导，实现对婚纱的纵向管理即生命周期管理，横向管理即种类管理
+                            本科毕业设计采用ssm框架，log4j打印，c3p0连接池，MD5加密，mysql持久化，RabbitMQ为中间件进行解耦、削峰及减轻数据库的压力，
+							实现对婚纱的纵向管理即生命周期管理，横向管理即用户对婚纱的体验。
                          </p>
                     </li>
                     <li>
                         <h3>基于 Java 的校园二手交易APP</h3>
                         <p>
-                            大三学期，毕业季来临，由百度贴吧产生构想，推出校内论坛式APP进行线上交易联络
+                            大三学期，毕业季来临，由百度贴吧产生构想，推出以SSM框架，mysql数据库为支撑的校内论坛式APP（注册人数200+）进行线上阅览，线下交易
                          </p>
                     </li>
                     <li>
                         <h3>基于 Java Web 的人力管理系统</h3>
                         <p>
-                            大二学期，学院成立第一届创业小组，作为当时第一个团队接受的第一个项目，具有纪念意义
+                            大二下学期，以第一届创业小组名义，开发了第一个以springMvc为核心的人力管理系统，我负责框架的搭建及工作流开发
                          </p>
                     </li>
                 </ul>
@@ -180,10 +191,9 @@
                 <h2 class="info-header"><i class="iconfont icon-flower"></i> <span class="info-title">自我评价</span></h2>
                 <hr>
                 <p>
-                    高考失利之后，上了大学就下定决心再也不要上学了，并且扬言不可能考研，但是大四实习之年，经历了社会工作高压，结婚生子的家庭压力，
-                    我开始意识到自己的能力急剧不足。于是我综合其他成本考虑，选择了边工作边考研这条路，万万没想到考了三年，成绩的不理想不仅没有磨灭我对上岸的期待，反而更加坚定了我对计算机的热爱，
-                    越是打击，越是兴奋,越是前进, 终于我看到了希望。正如2020/2022/2023三年,对应分数240/280/320一样,面对压力，在我保持亢奋的同时也会调整方法策略,稳步向前。以积极的态度面对明天，
-                    就不会留下什么遗憾,也会得到一个最适合自己的结果。
+                    自大二起，参加信科院第一届创业小组到现在已经有六年的Java开发经验，
+					有深刻的面向对象开发思想，培养了良好的代码规范、不断学习及github社区交流的习惯，
+					养成了抗压、阅读源码及开发文档能力。
                 </p>
             </div>
         </div>
