简单的修改

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <li>
                         <label class="left-label">姓名</label><span class="label-value">仪志鑫</span></li>
                     <li>
-                        <label class="left-label">学历</label><span class="label-value">本科</span></li>
+                        <label class="left-label">学历</label><span class="label-value">研究生</span></li>
                     <li>
                         <label class="left-label">毕业院校</label><span class="label-value">枣庄学院</span></li>
                     <li>
