--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <title>仪志鑫</title>
-    <link rel="stylesheet" href="static/css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.1.0/remodal.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.1.0/remodal-default-theme.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.1.0/remodal.min.js"></script>
-    <script src="static/js/script.js"></script>
+    <link rel="stylesheet" href="static/css/style，css">
+    <link rel="stylesheet" href="https：//cdnjs，cloudflare.com/ajax/libs/remodal/1，1，0/remodal，css">
+    <link rel="stylesheet" href="https：//cdnjs，cloudflare.com/ajax/libs/remodal/1，1，0/remodal-default-theme，min，css">
+    <script src="https：//cdnjs，cloudflare.com/ajax/libs/jquery/1，12，4/jquery，min，js"></script>
+    <script src="https：//cdnjs，cloudflare.com/ajax/libs/remodal/1，1，0/remodal，min，js"></script>
+    <script src="static/js/script，js"></script>
 </head>
 
 <body>
@@ -37,9 +37,9 @@
                     <li>
                         <label class="left-label">学历</label><span class="label-value">研究生</span></li>
                     <li>
-                        <label class="left-label">毕业院校</label><span class="label-value">枣庄学院</span></li>
+                        <label class="left-label">毕业院校</label><span class="label-value">哈尔滨理工大学</span></li>
                     <li>
-                        <label class="left-label">毕业年份</label><span class="label-value">2019</span></li>
+                        <label class="left-label">毕业年份</label><span class="label-value">2026</span></li>
                 </ul>
             </div>
             <div class="contact info-unit">
@@ -51,26 +51,27 @@
                     <li>
                         <label class="left-label">邮箱</label><span class="label-value">new961102@163.com</span></li>
                     <li>
-                        <label class="left-label">Github</label><span class="label-value" style="color:green;"
-              onclick="javascript:window.open('https://github.com/201512130144')"  >https://github.com/201512130144</span></li>
+                        <label class="left-label">Github</label><span class="label-value" style="color：green;"
+              onclick="javascript：window，open('https：//github.com/201512130144')"  >https：//github.com/201512130144</span></li>
                 </ul>
             </div>
             <div class="skill info-unit">
                 <h2 class="info-header"><i class="iconfont icon-star"></i> <span class="info-title">技能点</span></h2>
                 <hr>
                 <ul class="progress-list">
-                    <li>
-                        <label class="left-label"  title="熟练且大学以来一直从事">Java Web全栈</label>
-                        <progress value="80" max="100"></progress>
+				   <li>
+                        <label class="left-label" title="感兴趣且研究生方向">声纹识别</label>
+                        <progress value="70" max="100"></progress>
                     </li>
                     <li>
-                        <label class="left-label"  title="面向对象编码能力">Java编码</label>
-                        <progress value="80" max="100"></progress>
+                        <label class="left-label"  title="熟练且大学以来一直从事">全栈开发</label>
+                        <progress value="90" max="100"></progress>
                     </li>
                     <li>
-                        <label class="left-label" title="感兴趣且研究生方向">人工智能</label>
-                        <progress value="10" max="100"></progress>
+                        <label class="left-label"  title="面向对象编码能力">编码、社区</label>
+                        <progress value="95" max="100"></progress>
                     </li>
+                 
                 </ul>
             </div>
             <div class="stack info-unit">
@@ -78,13 +79,13 @@
                 <hr>
                 <ul class="stack-list">
                     <li>
-                        <label class="left-label">前端</label><span class="label-value">jQuery、js</span></li>
+                        <label class="left-label">前端</label><span class="label-value">Vue、jQuery</span></li>
                     </li>
                     <li>
                         <label class="left-label">后端</label><span class="label-value">Spring、SpringBoot、SpringCloud</span></li>
                     </li>
                     <li>
-                        <label class="left-label">数据库</label><span class="label-value">Oracle、Redis</span></li>
+                        <label class="left-label">数据库</label><span class="label-value">Redis、Postgres、Mongo、Mysql、Oracle</span></li>
                     </li>
                 </ul>
             </div>
@@ -93,7 +94,7 @@
                 <h2 class="info-header"><i class="iconfont icon-weixin"></i> <span class="info-title">个人微信</span></h2>
                 <hr>
                 <div class="weixin">
-                    <img src="static/image/weixin.png" alt="">
+                    <img src="static/image/weixin，png" alt="">
 
                 </div>
             </div>
@@ -108,21 +109,28 @@
             <div class="education info-unit right-list">
                 <h2 class="info-header"><i class="iconfont icon-education"></i> <span class="info-title">教育经历</span></h2>
                 <hr>
-                <ul class="experience-list">
+				     <ul class="experience-list">
                     <li>
-                        <h3>枣庄学院 - 计算机科学与技术专业（本科）2015-2019</h3>
-                        <p >
-                            <b>一志愿：电子科技大学 - 计算机专硕</b><br>
-                            &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp初试成绩：        &nbsp&nbsp &nbsp&nbsp 思想政治：65   &nbsp&nbsp&nbsp&nbsp 英语一：60      &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp 数学一：102 <br>
-                            &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp 计算机专业基础(数据结构+操作系统) &nbsp&nbsp ：&nbsp&nbsp96 &nbsp&nbsp &nbsp&nbsp &nbsp&nbsp &nbsp&nbsp   <b>总分:323</b>
+		      <h3>哈尔滨理工大学 - 计算机科学与技术专业（研究生）2023-2026</h3>
+                        <p>
+                         <b>研究生课题：说话人确认（speaker verification）<br>
+                           卷积神经网络（CNN），图卷积神经网络（CNN），Transformer，具体：大模型（wavlm，hubert，wav2vec），单体架构（ecapa，ecapa2，pcf，ska）</b>
                         </p>
                     </li>
                 </ul>
-                <ul class="experience-list">
+				<ul class="experience-list">
                     <li>
+                        <h3>工作经历 - 计算机软件 2019-2023</h3>
                         <p>
-                         <b>本科课程：Java程序设计、C语言、软件工程、数据结构、操作系统<br>
-                            &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp计算机网络、计算机组成原理、数据库原理、Html、汇编语言</b>
+                           <b>电子商务软件，医疗软件，财务软件</b>
+                        </p>
+                    </li>
+                </ul>
+				<ul class="experience-list">
+                    <li>
+                        <h3>枣庄学院 - 计算机科学与技术专业（本科）2015-2019</h3>
+                        <p >
+                            <b>注重软件开发的习惯和工具，从未适配以人为本的敏捷开发。</b><br>
                         </p>
                     </li>
                 </ul>
@@ -130,16 +138,34 @@
                     <li>
                        
                         <p>
-                           <b>证书：英语四级、C语言二级</b>
+                           <b>证书：系统架构设计师：45,46,39（24年上半年）、英语六级：413、C语言二级</b>
                         </p>
                     </li>
                 </ul>
             </div>
             <div class="work info-unit right-list">
-                <h2 class="info-header"><i class="iconfont icon-work"></i> <span class="info-title">工作经历</span></h2>
+                <h2 class="info-header"><i class="iconfont icon-work"></i> <span class="info-title">研究生阶段</span></h2>
                 <hr>
                 <ul class="experience-list">
                     <li>
+                        <h3 >声纹识别</h3>
+                        <p>通过一条语音来确认说话者的身份。对于高维时序复杂信息往往通过STFT、加噪、卷积、池化、损失计算。对于Voxceleb的大规模数据，卷积有参数量小和计算快等特点。实验证明，如何构造多尺度是主要目标。在大模型盛行的时代，
+						限于资源，很难实现多模态相关的科研任务，故针对主流的卷积，为了得到更少的参数，更小的乘积累加运算（MAC），提出大感受野对应的多通道。参数量减少一半，MAC小幅度减少，
+						性能保持不变。基于此，未来可以在任意卷积基础上得到多个优秀的多模态融合，从而得到新的Sota。
+                    </li>
+
+                </ul class="experience-list">
+            </div>
+            <div class="project info-unit right-list">
+                <h2 class="info-header"><i class="iconfont icon-project"></i> <span class="info-title">个人项目</span></h2>
+                <hr>
+                <ul class="experience-list">
+		   <li>
+                        <h3 >电子商务支付 - SpringCloud</h3>
+                        <p>为了整合一码多联，故推出支付平台，年交易量达到2亿。对应多个第三方支付接口（微信/支付宝/银联），熟悉支付结算、风控体系、跨境支付等核心模块。
+						Redis（支付流水缓存）、RocketMQ（交易异步通知）、Elasticsearch（交易日志分析）。
+                    </li>
+		   <li>
                         <h3 >医疗耗材 - SpringCloud</h3>
                         <p>为了落实医药分离，实现零差价，精细化管理，故推出SPD平台。该平台采用SpringCloud+Tomcat/Nginx+Redis+RabbitMQ+oracle的技术开发框架。
 						 Supply端，以redis缓存进行耗材/药品信息维护，减少I/O，缓解数据库压力。Process端，系统以Nginx处理静态资源，tomcat处理动态资源，
@@ -148,40 +174,28 @@
                     </li>
                     <li>
                         <h3>财务一体化 - SpringMvc</h3>
-                        <p>以面向对象的模式，开发财务一体化导入导出平台，以EasyExcel技术进行百万级别数据的导出（用时30s），分批读取+JDBC分批插入+事务的批量操作来实现百万数据的导入（用时5s），同时对工作流财务报销、项目申报等模块进行开发及个性化需求维护。
+                        <p>以面向对象的模式，开发财务一体化导入导出平台，以EasyExcel技术进行百万级别数据的导出（用时30s），分批读取+JDBC分批插入+事务的批量操作来实现百万数据的流式导入（用时5s），同时自定义注解来对工作流财务报销、项目申报等模块进行开发及个性化需求维护。
                         </p>
                     </li>
-                </ul class="experience-list">
-            </div>
-            <div class="project info-unit right-list">
-                <h2 class="info-header"><i class="iconfont icon-project"></i> <span class="info-title">个人项目</span></h2>
-                <hr>
-                <ul class="experience-list">
                     <li>
                         <h3>基于 Java 的ICU重症监护系统</h3>
                         <p>
-                            大四学期,创业小组以学校的名义承担枣庄市立医院ICU系统开发，通过PDA获取信息，
-                            以锐浪报表展示病人病史、医疗状况、恢复情况，以病历模板形式书写病历并给出治疗建议。对超出预期状况进行预警，如ICU的外设红色提醒灯。
+                            创业小组以学校的名义承担枣庄市立医院ICU系统开发，通过PDA获取信息，
+                            以报表来呈现出病人病史、医疗状况、恢复情况，以病历模板形式书写病历并给出治疗建议。对超出预期状况进行预警，如ICU的外设红色提醒灯。
                             <br/>
                         </p>
                     </li>
                     <li>
-                        <h3>基于 Java 的婚纱管理系统 </h3>
-                        <p>
-                            本科毕业设计采用ssm框架，log4j打印，c3p0连接池，MD5加密，mysql持久化，RabbitMQ为中间件进行解耦、削峰及减轻数据库的压力，
+                        <h3>小型管理系统 </h3>
+                         <p>
+                            基于 Java 的婚纱管理系统：本科毕业设计采用ssm框架，log4j打印，c3p0连接池，MD5加密，mysql持久化，RabbitMQ为中间件进行解耦、削峰及减轻数据库的压力，
 							实现对婚纱的纵向管理即生命周期管理，横向管理即用户对婚纱的体验。
                          </p>
-                    </li>
-                    <li>
-                        <h3>基于 Java 的校园二手交易APP</h3>
-                        <p>
-                            大三学期，毕业季来临，由百度贴吧产生构想，推出以SSM框架，mysql数据库为支撑的校内论坛式APP（注册人数200+）进行线上阅览，线下交易
+			 <p>
+                            基于 Java 的校园二手交易APP：大三学期，毕业季来临，由百度贴吧产生构想，推出以SSM框架，mysql数据库为支撑的校内论坛式APP（注册人数200+）进行线上阅览，线下交易。
                          </p>
-                    </li>
-                    <li>
-                        <h3>基于 Java Web 的人力管理系统</h3>
-                        <p>
-                            大二下学期，以第一届创业小组名义，开发了第一个以springMvc为核心的人力管理系统，我负责框架的搭建及工作流开发
+			     <p>
+                            基于 Java Web 的人力管理系统：大二下学期，以第一届创业小组名义，开发了第一个以springMvc为核心的人力管理系统，我负责框架的搭建及工作流开发。
                          </p>
                     </li>
                 </ul>
@@ -191,9 +205,9 @@
                 <h2 class="info-header"><i class="iconfont icon-flower"></i> <span class="info-title">自我评价</span></h2>
                 <hr>
                 <p>
-                    自大二起，参加信科院第一届创业小组到现在已经有六年的Java开发经验，
-					有深刻的面向对象开发思想，培养了良好的代码规范、不断学习及github社区交流的习惯，
-					养成了抗压、阅读源码及开发文档能力。
+                    自16年起，参加枣庄学院信科院第一届创业小组，后从事软件开发类工作，再到神经网络。截止现在，已有八年代码开发经验和培养了良好的英文文档阅读能力，
+					同时具有深刻的面向对象开发思想及良好的代码规范，期间活跃在github和stackoverflow社区，辅助当前问题的解决方案，
+					养成了抗压、敏捷开发（以人为本）的能力。
                 </p>
             </div>
         </div>
