更新引入库

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <title>仪志鑫</title>
-    <link rel="stylesheet" href="static/css/style，css">
-    <link rel="stylesheet" href="https：//cdnjs，cloudflare.com/ajax/libs/remodal/1，1，0/remodal，css">
-    <link rel="stylesheet" href="https：//cdnjs，cloudflare.com/ajax/libs/remodal/1，1，0/remodal-default-theme，min，css">
-    <script src="https：//cdnjs，cloudflare.com/ajax/libs/jquery/1，12，4/jquery，min，js"></script>
-    <script src="https：//cdnjs，cloudflare.com/ajax/libs/remodal/1，1，0/remodal，min，js"></script>
-    <script src="static/js/script，js"></script>
+     <link rel="stylesheet" href="static/css/style.css">
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.1.0/remodal.css">
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.1.0/remodal-default-theme.min.css">
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.1.0/remodal.min.js"></script>
+     <script src="static/js/script.js"></script>
 </head>
 
 <body>
